--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
             <canvas id="hourHand" width="20" height="90"></canvas>
             <canvas id="minutHand" width="20" height="110"></canvas>
         </div>
+        <script src="js.js"></script>
     </body>
 </html>
