закрасил канвас, нужно разобраться в стартовых углах

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <div class="tpick">
             <canvas id="backCan" width="240" height="240"></canvas>
             <canvas id="hourHand" width="20" height="90" ></canvas>
-            <canvas id="minutHand" width="20" height="110"></canvas>
+            <canvas id="minutHand" width="12" height="110"></canvas>
         </div>
+        <script src="drawer.js"></script>
         <script src="js.js"></script>
     </body>
 </html>
